# vargsten3d

./: .gitignore  CMakeLists.txt
libvs3d/: CMakeLists.txt
libvs3d/include/: vs3d.h
libvs3d/src/: vs3d.c
varg/: CMakeLists.txt
varg/src/: main.c  wl6.c  wl6.h  wolf.c  wolf.h
vargsten/: CMakeLists.txt
vargsten/include/: vargsten.h
vargsten/src/: vargsten.c
vs3d/: CMakeLists.txt
vs3d/src/: main.c
